[package]
name = "polycube-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8.0"
nalgebra = "0.32.3"
rustc-hash = "1.1.0"
smallvec = { version = "1.11.0", features = ["serde"] }
zstd = "0.12.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"  # Further optimization for release builds
debug = false